--- a/web/themes/contrib/ensemble/less/less/event.less
+++ b/web/themes/contrib/ensemble/less/less/event.less
@@ -1,4 +1,21 @@
 .page-node-type-event {
+  .field--name-field-event-type {
+    .title-regular();
+    text-transform: uppercase;
+    font-size: 0.7em;
+    a {
+      color: #000;
+    }
+  }
+  .field--name-node-title > h2.page-header {
+    font-size: 1em;
+    &:before {
+      .glyphicon();
+      content: "\e807";
+      color: @gray-ensemble;
+      font-size: 2em;
+    }
+  }
   .field--name-body {
     padding-right: 30px;
   }
