--- a/web/themes/contrib/ensemble/less/templates/ds-2col-stacked--node-event.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/ds-2col-stacked--node-event.html.twig
@@ -37,6 +37,10 @@
     </{{ left_wrapper }}>
   </div>
   <div class="col-md-6">
+    <div class="under-inci-info">
+      <button class="btn btn-primary btn-lg information" data-target="#infoModal" data-toggle="modal" type="button">Je m'informe</button>
+      <button class="btn btn-primary btn-lg incitation" data-target="#goModal" data-toggle="modal" type="button">Je participe</button>
+    </div>
     <{{ right_wrapper }}{{ right_attributes.addClass('group-right') }}>
       {{ right }}
   </{{ right_wrapper }}>
