--- a/web/themes/contrib/ensemble/less/less/style.less
+++ b/web/themes/contrib/ensemble/less/less/style.less
@@ -12,6 +12,7 @@
 @import 'home';
 @import 'map';
 @import 'event';
+@import 'article';
 @import 'incitation';
 @import 'slideshow';
 @import 'webform';
