--- a/web/themes/contrib/ensemble/less/less/event.less
+++ b/web/themes/contrib/ensemble/less/less/event.less
@@ -1,4 +1,7 @@
 .page-node-type-event {
+  .region-content > h2.page-header {
+    display: none;
+  }
   .field--name-field-event-type {
     .title-regular();
     text-transform: uppercase;
@@ -56,8 +59,35 @@
   .field--name-field-place {
     margin-top: 30px;
   }
-}
+  .back-to-list {
+    a {
+      display: block;
+      float: right;
+      .title-bold;
+      font-size: 1.2em;
+      color: @gray-darker-ensemble;
+      text-transform: uppercase;
+      padding: 15px 5px 15px 15px;
+      margin-top: 20px;
+      background-color: @gray-light-ensemble;
+      &:after {
+        .glyphicon();
+        content:"\e836";
+        color: white;
+        font-size: 1.6em;
+        margin-left: 10px;
+      }
+      &:hover {
+        text-decoration: none;
+        color: white;
+         background-color: @red-ensemble;
+        &:after {
 
+        }
+      }
+    }
+  }
+}
 /* Liste des événements ***********************************************************************************************/
 body.path-agenda {
   h2.page-header {
