ds-2col-stacked--node-article.html.twig and ds-2col-stacked--node-event.html.twig up to manage incentive links.

--- a/web/themes/contrib/ensemble/less/templates/ds-2col-stacked--node-event.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/ds-2col-stacked--node-event.html.twig
@@ -43,6 +43,7 @@
     </div>
     <{{ right_wrapper }}{{ right_attributes.addClass('group-right') }}>
       {{ right }}
+    <div class="back-to-list"><a href="/agenda">Retour à la liste</a></div>
   </{{ right_wrapper }}>
   </div>
 </div>
