--- a/web/themes/contrib/ensemble/less/templates/ds-2col-stacked--node-article.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/ds-2col-stacked--node-article.html.twig
@@ -31,12 +31,16 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-9">
     <{{ left_wrapper }}{{ left_attributes.addClass('group-left') }}>
       {{ left }}
     </{{ left_wrapper }}>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-3">
+    <div class="under-inci-info">
+      <button class="btn btn-primary btn-lg information" data-target="#infoModal" data-toggle="modal" type="button">Je m'informe</button>
+      <button class="btn btn-primary btn-lg incitation" data-target="#goModal" data-toggle="modal" type="button">Je participe</button>
+    </div>
     <{{ right_wrapper }}{{ right_attributes.addClass('group-right') }}>
       {{ right }}
   </{{ right_wrapper }}>
