--- a/web/themes/contrib/ensemble/less/less/overrides.less
+++ b/web/themes/contrib/ensemble/less/less/overrides.less
@@ -35,7 +35,7 @@ ol, ul {
   margin-top: 45px;
   padding-top: 35px;
   padding-bottom: 36px;
-  border-top: 1px solid #E5E5E5;
+  /*border-top: 1px solid #E5E5E5;*/
 }
 
 // Paragraphs.
