LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/incitation.less
+++ b/web/themes/contrib/ensemble/less/less/incitation.less
@@ -109,6 +109,11 @@
 }
 .path-frontpage{
   .under-inci-info {
+    .btn-primary {
+      background-color: transparent;
+      border: 0;
+      margin: 0;
+    }
     padding: 30px 20px;
     height: 360px;
     background-color: white;
