LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -54,7 +54,7 @@ body {
   #icon-search-sm {
     @media (max-width: @screen-sm) {
       display: table;
-      margin: 10px 10px 20px 90%;
+      margin: 10px 10px 20px 85%;
       width: 30px;
       height: 30px;
       &:before{
@@ -407,5 +407,7 @@ footer.container {
       }
     }
   }
-
+}
+button.navbar-toggle {
+  margin-right: 25px !important;
 }
