--- a/web/themes/contrib/ensemble/less/fontello/css/fontello.css
+++ b/web/themes/contrib/ensemble/less/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?70508790');
-  src: url('../font/fontello.eot?70508790#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?70508790') format('woff2'),
-       url('../font/fontello.woff?70508790') format('woff'),
-       url('../font/fontello.ttf?70508790') format('truetype'),
-       url('../font/fontello.svg?70508790#fontello') format('svg');
+  src: url('../font/fontello.eot?84953814');
+  src: url('../font/fontello.eot?84953814#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?84953814') format('woff2'),
+       url('../font/fontello.woff?84953814') format('woff'),
+       url('../font/fontello.ttf?84953814') format('truetype'),
+       url('../font/fontello.svg?84953814#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?70508790#fontello') format('svg');
+    src: url('../font/fontello.svg?84953814#fontello') format('svg');
   }
 }
 */
@@ -188,10 +188,20 @@
 .icon-icon-participer-noir:before { content: '\e882'; } /* '' */
 .icon-icon-sinformer:before { content: '\e883'; } /* '' */
 .icon-icon-sinformer-noir:before { content: '\e884'; } /* '' */
+.icon-archive:before { content: '\e885'; } /* '' */
+.icon-lightbulb:before { content: '\e886'; } /* '' */
+.icon-lightbulb-alt:before { content: '\e887'; } /* '' */
+.icon-tree:before { content: '\e888'; } /* '' */
+.icon-globe:before { content: '\e889'; } /* '' */
+.icon-globe-1:before { content: '\e88a'; } /* '' */
+.icon-group:before { content: '\e88b'; } /* '' */
+.icon-group-circled:before { content: '\e88c'; } /* '' */
 .icon-heart-broken:before { content: '\f028'; } /* '' */
 .icon-location-4:before { content: '\f031'; } /* '' */
 .icon-blank:before { content: '\f0c8'; } /* '' */
 .icon-list-bullet:before { content: '\f0ca'; } /* '' */
 .icon-list-numbered:before { content: '\f0cb'; } /* '' */
+.icon-lightbulb-1:before { content: '\f0eb'; } /* '' */
 .icon-thumbs-up-alt:before { content: '\f164'; } /* '' */
 .icon-thumbs-down-alt:before { content: '\f165'; } /* '' */
+.icon-tree-1:before { content: '\f1bb'; } /* '' */
