LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -448,7 +448,7 @@ button.navbar-toggle {
     top: -30px !important;
   }
 }
-.icon-icon-occitanie {
+.icon-occitanie {
   &:before {
     .icon-taxo-theme();
     content: "\e878";
