LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/event.less
+++ b/web/themes/contrib/ensemble/less/less/event.less
@@ -61,30 +61,7 @@
   }
   .back-to-list {
     a {
-      display: block;
-      float: right;
-      .title-bold;
-      font-size: 1.2em;
-      color: @gray-darker-ensemble;
-      text-transform: uppercase;
-      padding: 15px 5px 15px 15px;
-      margin-top: 20px;
-      background-color: @gray-light-ensemble;
-      &:after {
-        .glyphicon();
-        content:"\e836";
-        color: white;
-        font-size: 1.6em;
-        margin-left: 10px;
-      }
-      &:hover {
-        text-decoration: none;
-        color: white;
-         background-color: @red-ensemble;
-        &:after {
-
-        }
-      }
+      .button-back();
     }
   }
 }
