--- a/web/themes/contrib/ensemble/less/less/article.less
+++ b/web/themes/contrib/ensemble/less/less/article.less
@@ -27,10 +27,33 @@ body.page-node-type-article {
     border: 0;
     margin-bottom: 20px;
   }
+  .same-height-col {
+    position: relative;
+    .under-inci-info {
+      .back-to-list {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        display: table;
+        margin: 100px auto 0 auto;
+        .button-back();
+        a{
+          font-size: 1em;
+        }
+      }
+    }
+  }
+
+
 }
 /* articles list ***********************************************/
 body.path-articles {
   .node--type-article {
+    .body-list-article {
+      min-height: 140px;
+      padding-bottom: 65px;
+
+    }
     .page-header {
       margin-bottom: 0;
       a {
@@ -42,15 +65,35 @@ body.path-articles {
         }
       }
     }
-    padding: 20px;
+    padding: 20px 20px 5px 20px;
     margin: 20px 0;
     background-color: @gray-light-ensemble;
-    min-height: 160px;
+
     line-height: 1.5em;
     &:after {
       display: block;
       content: '';
       clear: both;
+    }
+    .field--name-node-link {
+      position: absolute;
+      bottom: 5px;
+      right: 10px;
+      display: table;
+      a {
+        padding: 15px;
+        display: block;
+        .title-bold();
+        text-transform: uppercase;
+        background-color: @red-ensemble;
+        color: #FFF;
+        text-decoration: none;
+        &:hover {
+          background-color: @green-ensemble;
+          color: #000;
+        }
+      }
+
     }
   }
 }
