--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -474,3 +474,34 @@ button.navbar-toggle {
   left: -15px !important;
   top: 0 !important;
 }
+.position-static {
+  position: static !important;
+}
+.button-back {
+  a {
+    display: block;
+    float: right;
+    .title-bold;
+    font-size: 1.2em;
+    color: @gray-darker-ensemble;
+    text-transform: uppercase;
+    padding: 8px 5px 15px 15px;
+    margin-top: 20px;
+    background-color: @gray-light-ensemble;
+    &:after {
+      .glyphicon();
+      content:"\e836";
+      color: white;
+      font-size: 1.6em;
+      margin-left: 10px;
+    }
+    &:hover {
+      text-decoration: none;
+      color: white;
+      background-color: @red-ensemble;
+      &:after {
+
+      }
+    }
+  }
+}
