ds-2col--node-article-liste.html.twig up.

--- a/web/themes/contrib/ensemble/less/templates/ds-2col--node-article-liste.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/ds-2col--node-article-liste.html.twig
@@ -23,7 +23,7 @@
     {{ left }}
   </{{ left_wrapper }}>
 
-  <{{ right_wrapper }}{{ right_attributes.addClass('col-md-11') }}>
+  <{{ right_wrapper }}{{ right_attributes.addClass('col-md-11', 'body-list-article') }}>
     {{ right }}
   </{{ right_wrapper }}>
 
