LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -37,6 +37,9 @@ body {
       clear: both;
     }
   }
+  div.highlighted {
+    margin-top: 50px;
+  }
 }
 
 /* Grille grid ********************************************************************************************************/
