--- a/web/themes/contrib/ensemble/less/less/incitation.less
+++ b/web/themes/contrib/ensemble/less/less/incitation.less
@@ -133,7 +133,6 @@
         margin-top: 20px;
         &.h3-information {
           margin-top: -30px;
-          border: 0;
         }
         a{
           background-color: transparent;
@@ -159,7 +158,11 @@
       }
     }
     @media (max-width: @screen-sm) {
-      h3{
+      h3 {
+        &.h3-information {
+          margin-top: -30px;
+          border: 0;
+        }
         a{
           &:before {
             float: none;
