--- a/web/themes/contrib/ensemble/less/fontello/css/fontello-codes.css
+++ b/web/themes/contrib/ensemble/less/fontello/css/fontello-codes.css
@@ -140,6 +140,10 @@
 .icon-globe-1:before { content: '\e88a'; } /* '' */
 .icon-group:before { content: '\e88b'; } /* '' */
 .icon-group-circled:before { content: '\e88c'; } /* '' */
+.icon-leaf:before { content: '\e88d'; } /* '' */
+.icon-leaf-1:before { content: '\e88e'; } /* '' */
+.icon-leaf-2:before { content: '\e88f'; } /* '' */
+.icon-leaf-3:before { content: '\e890'; } /* '' */
 .icon-heart-broken:before { content: '\f028'; } /* '' */
 .icon-location-4:before { content: '\f031'; } /* '' */
 .icon-blank:before { content: '\f0c8'; } /* '' */
