--- a/web/themes/contrib/ensemble/less/fontello/css/fontello.css
+++ b/web/themes/contrib/ensemble/less/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?84953814');
-  src: url('../font/fontello.eot?84953814#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?84953814') format('woff2'),
-       url('../font/fontello.woff?84953814') format('woff'),
-       url('../font/fontello.ttf?84953814') format('truetype'),
-       url('../font/fontello.svg?84953814#fontello') format('svg');
+  src: url('../font/fontello.eot?83835008');
+  src: url('../font/fontello.eot?83835008#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?83835008') format('woff2'),
+       url('../font/fontello.woff?83835008') format('woff'),
+       url('../font/fontello.ttf?83835008') format('truetype'),
+       url('../font/fontello.svg?83835008#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?84953814#fontello') format('svg');
+    src: url('../font/fontello.svg?83835008#fontello') format('svg');
   }
 }
 */
@@ -196,6 +196,10 @@
 .icon-globe-1:before { content: '\e88a'; } /* '' */
 .icon-group:before { content: '\e88b'; } /* '' */
 .icon-group-circled:before { content: '\e88c'; } /* '' */
+.icon-leaf:before { content: '\e88d'; } /* '' */
+.icon-leaf-1:before { content: '\e88e'; } /* '' */
+.icon-leaf-2:before { content: '\e88f'; } /* '' */
+.icon-leaf-3:before { content: '\e890'; } /* '' */
 .icon-heart-broken:before { content: '\f028'; } /* '' */
 .icon-location-4:before { content: '\f031'; } /* '' */
 .icon-blank:before { content: '\f0c8'; } /* '' */
