LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -300,6 +300,8 @@ body:not(.path-frontpage) {
 footer.container {
   margin-top: 0;
   padding-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
   #top-footer {
     background-image:url('../images/bandeau-footer-1200.png');
     background-repeat:no-repeat;
@@ -373,11 +375,11 @@ footer.container {
       color: #FFF;
       width: 314px;
       @media (min-width: @screen-lg) {
-        margin-top: 140px;
+        margin-top: 150px;
         background-color: transparent;
-        font-size: 1.5em;
+        font-size: 1.3em;
         color: #FFF;
-        width: 480px;
+        width: 400px;
       }
       @media (max-width: @screen-lg) and (min-width: @screen-md) {
         margin-top: 140px;
@@ -391,7 +393,6 @@ footer.container {
         clear: both;
         margin: 5px auto;
       }
-
     }
   }
   .menu-footer {
