--- a/web/themes/contrib/ensemble/less/less/map.less
+++ b/web/themes/contrib/ensemble/less/less/map.less
@@ -41,28 +41,14 @@
     }
   }
 
-  .legend{
+  .legend {
     font-size: 1.2em;
     margin: 10px 0;
     &:hover {
       color: @green-ensemble;
     }
   }
-  .social{
-    &:before {
-      color: @red-ensemble;
-    }
-    &.legend{
-      &:before {
-        .glyphicon();
-        color: @red-ensemble;
-        content: "\e878";
-        margin-right: 3px;
-        text-decoration: none;
-      }
-    }
-  }
-  .ecologie{
+  .thematique-1 { /* Ecologie */
     &:before {
       color: @green-ensemble;
     }
@@ -70,7 +56,105 @@
       &:before {
         .glyphicon();
         color: @green-ensemble;
-        content: "\e878";
+        content: "\e88d";
+        margin-right: 3px;
+        text-decoration: none;
+      }
+    }
+  }
+  .thematique-2 { /* Archives */
+    &:before {
+      color: @black-ensemble;
+    }
+    &.legend{
+      &:before {
+        .glyphicon();
+        color: @black-ensemble;
+        content: "\e885";
+        margin-right: 3px;
+        text-decoration: none;
+      }
+    }
+  }
+  .thematique-3 { /* International */
+    &:before {
+      color: @green-ensemble;
+    }
+    &.legend{
+      &:before {
+        .glyphicon();
+        color: @blue-ensemble;
+        content: "\e88a";
+        margin-right: 3px;
+        text-decoration: none;
+      }
+    }
+  }
+  .thematique-4 { /* solidarité */
+    &:before {
+      color: @green-ensemble;
+    }
+    &.legend{
+      &:before {
+        .glyphicon();
+        color: @red-ensemble;
+        content: "\e88c";
+        margin-right: 3px;
+        text-decoration: none;
+      }
+    }
+  }
+  .thematique-5 {/* questions sociales */
+    &:before {
+      color: @red-ensemble;
+    }
+    &.legend{
+      &:before {
+        .glyphicon();
+        color: @red-ensemble;
+        content: "\e88b";
+        margin-right: 3px;
+        text-decoration: none;
+      }
+    }
+  }
+  .thematique-6 {/* Brasserie des idées */
+    &:before {
+      color: @red-ensemble;
+    }
+    &.legend{
+      &:before {
+        .glyphicon();
+        color: @red-ensemble;
+        content: "\e886";
+        margin-right: 3px;
+        text-decoration: none;
+      }
+    }
+  }
+  .thematique-7 {/* Luttes */
+    &:before {
+      color: @red-ensemble;
+    }
+    &.legend{
+      &:before {
+        .glyphicon();
+        color: @red-ensemble;
+        content: "\e882";
+        margin-right: 3px;
+        text-decoration: none;
+      }
+    }
+  }
+  .thematique-12 {/* Occitanie et hérault */
+    &:before {
+      color: @red-ensemble;
+    }
+    &.legend{
+      &:before {
+        .glyphicon();
+        color: @black-ensemble;
+        content: "\f031";
         margin-right: 3px;
         text-decoration: none;
       }
