--- a/web/themes/contrib/ensemble/less/less/map.less
+++ b/web/themes/contrib/ensemble/less/less/map.less
@@ -141,8 +141,10 @@
         .glyphicon();
         color: @red-ensemble;
         content: "\e882";
-        margin-right: 3px;
         text-decoration: none;
+        font-size: 1.7em;
+        left: -5px;
+        margin-right: -5px;
       }
     }
   }
