LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -428,7 +428,7 @@ button.navbar-toggle {
 .icon-organic {
   &:before {
     .icon-taxo-theme();
-    content: "\f1bb";
+    content: "\e88d";
   }
 }
 .icon-archive {
