--- a/web/themes/contrib/ensemble/less/less/home.less
+++ b/web/themes/contrib/ensemble/less/less/home.less
@@ -31,11 +31,9 @@
         }
       }
     }
-
     a {
       display: block;
     }
-
   }
   .home-actu {
     .title-regular();
@@ -48,6 +46,11 @@
   }
   .feed-icons {
     display: none;
+  }
+  .view-id-frontpage {
+    .col-xs-12 {
+      margin-bottom: 30px;
+    }
   }
 }
 
