LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/article.less
+++ b/web/themes/contrib/ensemble/less/less/article.less
@@ -48,11 +48,13 @@ body.page-node-type-article {
 }
 /* articles list ***********************************************/
 body.path-articles {
-  .node--type-article {
+  .node--view-mode-teaser {
+
+  }
+  .node--view-mode-liste {
     .body-list-article {
       min-height: 140px;
       padding-bottom: 65px;
-
     }
     .page-header {
       margin-bottom: 0;
