--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -190,6 +190,11 @@ h2.page-header {
   font-size: 2em;
   margin-top: 20px;
 }
+h3.page-header {
+  .title-extra-bold();
+  font-size: 1.6em;
+  margin-top: 20px;
+}
 #search-block-form--2 {
   @media (min-width: @screen-sm) {
     display: none;
