--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -508,7 +508,7 @@ button.navbar-toggle {
   a {
     display: block;
     float: right;
-    .title-bold;
+    .title-bold();
     font-size: 1.2em;
     color: @gray-darker-ensemble;
     text-transform: uppercase;
