--- a/web/themes/contrib/ensemble/less/less/map.less
+++ b/web/themes/contrib/ensemble/less/less/map.less
@@ -78,12 +78,12 @@
   }
   .thematique-3 { /* International */
     &:before {
-      color: @green-ensemble;
+      color: @yellow-ensemble;
     }
     &.legend{
       &:before {
         .glyphicon();
-        color: @blue-ensemble;
+        color: @yellow-ensemble;
         content: "\e88a";
         margin-right: 3px;
         text-decoration: none;
@@ -92,7 +92,7 @@
   }
   .thematique-4 { /* solidarité */
     &:before {
-      color: @green-ensemble;
+      color: @red-ensemble;
     }
     &.legend{
       &:before {
@@ -120,12 +120,12 @@
   }
   .thematique-6 {/* Brasserie des idées */
     &:before {
-      color: @red-ensemble;
+      color: @violet-ensemble;
     }
     &.legend{
       &:before {
         .glyphicon();
-        color: @red-ensemble;
+        color: @violet-ensemble;
         content: "\e886";
         margin-right: 3px;
         text-decoration: none;
