--- a/web/themes/contrib/ensemble/less/less/slideshow.less
+++ b/web/themes/contrib/ensemble/less/less/slideshow.less
@@ -1,3 +1,14 @@
+#a-la-une {
+  position: absolute;
+  top: 0;
+  left: 105px;
+  .title-bold();
+  color: #FFF;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  background-color: @gray-darker-ensemble;
+  z-index: 1;
+}
 #top-home-ss-incentive {
   margin-top: 143px;
   background-color: white;
