--- a/web/themes/contrib/ensemble/less/fontello/css/fontello-codes.css
+++ b/web/themes/contrib/ensemble/less/fontello/css/fontello-codes.css
@@ -144,6 +144,12 @@
 .icon-leaf-1:before { content: '\e88e'; } /* '' */
 .icon-leaf-2:before { content: '\e88f'; } /* '' */
 .icon-leaf-3:before { content: '\e890'; } /* '' */
+.icon-clock-1:before { content: '\e891'; } /* '' */
+.icon-back-in-time:before { content: '\e892'; } /* '' */
+.icon-clock:before { content: '\e893'; } /* '' */
+.icon-clock-alt:before { content: '\e894'; } /* '' */
+.icon-clock-2:before { content: '\e895'; } /* '' */
+.icon-clock-3:before { content: '\e896'; } /* '' */
 .icon-heart-broken:before { content: '\f028'; } /* '' */
 .icon-location-4:before { content: '\f031'; } /* '' */
 .icon-blank:before { content: '\f0c8'; } /* '' */
