--- a/web/themes/contrib/ensemble/less/fontello/css/fontello.css
+++ b/web/themes/contrib/ensemble/less/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?83835008');
-  src: url('../font/fontello.eot?83835008#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?83835008') format('woff2'),
-       url('../font/fontello.woff?83835008') format('woff'),
-       url('../font/fontello.ttf?83835008') format('truetype'),
-       url('../font/fontello.svg?83835008#fontello') format('svg');
+  src: url('../font/fontello.eot?16299457');
+  src: url('../font/fontello.eot?16299457#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?16299457') format('woff2'),
+       url('../font/fontello.woff?16299457') format('woff'),
+       url('../font/fontello.ttf?16299457') format('truetype'),
+       url('../font/fontello.svg?16299457#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?83835008#fontello') format('svg');
+    src: url('../font/fontello.svg?16299457#fontello') format('svg');
   }
 }
 */
@@ -200,6 +200,12 @@
 .icon-leaf-1:before { content: '\e88e'; } /* '' */
 .icon-leaf-2:before { content: '\e88f'; } /* '' */
 .icon-leaf-3:before { content: '\e890'; } /* '' */
+.icon-clock-1:before { content: '\e891'; } /* '' */
+.icon-back-in-time:before { content: '\e892'; } /* '' */
+.icon-clock:before { content: '\e893'; } /* '' */
+.icon-clock-alt:before { content: '\e894'; } /* '' */
+.icon-clock-2:before { content: '\e895'; } /* '' */
+.icon-clock-3:before { content: '\e896'; } /* '' */
 .icon-heart-broken:before { content: '\f028'; } /* '' */
 .icon-location-4:before { content: '\f031'; } /* '' */
 .icon-blank:before { content: '\f0c8'; } /* '' */
