newsletter js and template up.

--- a/web/themes/contrib/ensemble/less/templates/ds-1col--node-newsletter-agenda-full.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/ds-1col--node-newsletter-agenda-full.html.twig
@@ -487,10 +487,12 @@
                           <div class="newsletter-paragraphes">
                             <p style="font-size: 15px; margin: 10px 0;"> Connaître l'extrême droite pour mieux la combattre</p>
                           </div>
-                          <p style="font-size: 15px; margin: 10px 0;" class="newsletter-date">
+                          <p style="font-size: 15px; margin: 10px 0;" >
                             <span class="newsletter-date-label"><b>Dates : </b></span><br />
-                            <div class="newsletter-date"><span >26 janvier 2019 - 10:00</span><br /></div>
-                            <div class="newsletter-date"><span >27 janvier 2019 - 10:00</span><br /></div>
+                            <div class="newsletter-dates">
+                              <div class="newsletter-date"><span >26 janvier 2019 - 10:00</span><br /></div>
+                              <div class="newsletter-date"><span >27 janvier 2019 - 10:00</span><br /></div>
+                            </div>
                           <p style="font-size: 15px; margin: 10px 0;">
                             <b>Adresse</b> :<br />
                             <span class="newsletter-address">Bourse du travail</span>
